--- a/gui/requirements.txt
+++ b/gui/requirements.txt
@@ -6,5 +6,8 @@
 # Dependencies:
 # - PyQt5: GUI framework for the application.
 # - python3-stdlib (logging, os): Assumed available in Python 3.
+# - schedule: Task scheduling.
+# - mpv: External binary (not a Python package).
 
 PyQt5==5.15.9
+schedule==1.2.2
